--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,93 @@
 @tailwind components;
 @tailwind utilities;
 
-.react-icons {
-  size: 40px;
+.testo {
+  mix-blend-mode: lighten; /* Adjust blend mode as needed */
+  animation: hue-rotate 3s linear infinite;
+  box-shadow: 0 0 1200px black inset;
 }
 
-.react-icons:hover {
-  color: #ff0000; /* Color on hover */
-  font-size: 20px; /* Font size on hover */
-  size: 30px;
+@keyframes hue-rotate {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+@keyframes hue-rotate-2 {
+  0%,
+  100% {
+    filter: hue-rotate(0deg);
+  }
+  50% {
+    filter: hue-rotate(180deg);
+  }
+}
+.pepeglow-border {
+  position: relative;
+  overflow: hidden; /* Ensures the pseudo-element doesn't go outside the container */
+  border-top: 3px solid transparent; /* Set the border size and make it transparent */
+}
+
+.pepeglow-border:before {
+  content: "";
+  position: absolute;
+  top: -1px; /* Align to the top border taking into account the border thickness */
+  left: 0;
+  width: 100%;
+  height: 3px; /* Same as the border-top size */
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  animation: glow-animation 2s infinite; /* Adjust the timing as needed */
+}
+
+@keyframes glow-animation {
+  0% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.flip-scale-up-hor {
+  -webkit-animation: flip-scale-up-hor 0.5s linear both;
+  animation: flip-scale-up-hor 0.5s linear both;
+}
+
+@-webkit-keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+    transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateX(-90deg);
+    transform: scale(2.5) rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-180deg);
+    transform: scale(1) rotateX(-180deg);
+  }
+}
+@keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+    transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(2.5) rotateX(-90deg);
+    transform: scale(2.5) rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-180deg);
+    transform: scale(1) rotateX(-180deg);
+  }
 }
